<resources>
    <string name="txt_Signup_register" translatable="false"></string>
    <string name="app_name">MyTechnicalV2</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Forgot">Forgot</string>
    <string name="title_activity_menu" translatable="false">MyTechnical</string>
    <string name="nav_header_desc" translatable="false">Description</string>
    <string name="nav_header_title" translatable="false">Title</string>
    <string name="nav_header_subtitle" translatable="false">Subtitle</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="action_settings">Setting</string>
    <string name="title">MyTechnical</string>

    <string name="signup">Register</string>
    <string name="Welcome">Welcome</string>
    <string name="Signup">Sign Up</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="ForgoPassword">Forgot Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="newpassword">New Password</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="congartulationsv2">YOU AREA SUCCESSFULLY</string>
    <string name="congratulationsv3">CHANGE YOUR PASSWORD</string>
    <string name="show">Show</string>
    <string name="menu_supportPC">PC Technical Support</string>
    <string name="menu_supporLaptop">Laptop Technical Support</string>
    <string name="menu_instalationNetwork">Network Installation</string>
    <string name="menu_instalationSoft">Software Installation</string>
    <string name="mytechnicalservices">Services MyTechnical</string>
    <string name="mytechnicaldescription">At MyTechnical, we have created a work philosophy of attention, assistance and professional service with human quality.</string>
    <string name="mytechnicaldescriptionv2">We are a serious and consolidated Mexican company, formed by professionals in the services of Technical Support, Computer Equipment and Audiovisual.</string>
    <string name="knowus">Know Us</string>
    <string name="user">user@gmail.com</string>
    <string name="about">About</string>
    <string name="aboutinfo">MyTechnical is the platform to request technical service. We currently offer a wide range of services by application in Aguascalientes.Today we connect with a huge number of users through technical solutions through the application such as PC Technical Support, Laptop Technical Support, Network Installation and Software Installation.</string>
    <string name="Physicalexamination">Revision Fisica</string>
    <string name="Diagnosis">Diagnostico</string>
    <string name="CleaningComputer">Limpieza de equipos de computo</string>
    <string name="Operatingsystem">Actualización del sistema operativo</string>
    <string name="backup">Copia de seguridad de la informacion</string>
    <string name="RAMexpansion">expansión RAM</string>
    <string name="Recover">Recuperacion de informacion</string>
    <string name="EquipmentCleaning">Limpieza de equipos</string>
    <string name="Antivirusupdate">Actualizacion de Antivirus</string>
    <string name="SystemOptimization">Optimizacion de Sistema</string>
    <string name="ProgramUpdate">Actualizacion de Programas</string>
    <string name="operatingsystemrepair">Reparacion del sistema Operativo</string>
    <string name="Hardwareupgrade">Actualizacion de Hardware</string>
    <string name="Removeantivirus">Eliminación de virus e instalación de antivirus</string>
    <string name="repairhard">Reparacion a nivel de Hardware</string>
    <string name="price">MXN $99.99</string>
    <string name="clientinfo">Client information</string>
    <string name="serviseinfo">Service information</string>
    <string name="payment">Payment method</string>
    <string name="cash">Cash</string>
    <string name="Paypal">Paypal</string>
    <string name="services">Services</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_term">Terms and Conditions</string>
    <string name="menu_editInfo">Profile Information</string>
    <string name="menu_LogOut">Log Out</string>
    <string name="passed">Your request has been completed successfully</string>
    <string name="next">Continue</string>
    <string name="instalationnet">Server</string>
    <string name="instalationnet2">Switch connection</string>
    <string name="instalationnet3">Installation of Hard Drives for Network</string>
    <string name="instalationnet4">Network Installation</string>
    <string name="instalationsoft">Antivirus installation</string>
    <string name="instalationsoft2">System installation</string>
    <string name="instalationsoft3">Installation of Office Package</string>
    <string name="instalationsoft4">Installation of Applications</string>
    <string name="alfredo" translatable="false">Alfredo Luna Castro</string>
    <string name="dir">Student of the Information Technology and Communications Engineering career at the Technological Institute of Aguascalientes, Mexico</string>
    <string name="alfredoemail" translatable="false">Alfredolunacastro07@gmail.com</string>
    <string name="pablo" translatable="false">José pablo gonzalez martinez</string>
    <string name="pabloemail" translatable="false">jpgm.nomercy@gmail.com</string>
    <string name="btnqualify">Qualify</string>
    <string name="emiliano" translatable="false">Emiliano Hernadez Rodriguez</string>
    <string name="emilianoemail" translatable="false">guez.emilio92@gmail.com</string>
    <string name="termandconditions">Term and Conditions</string>
    <string name="term">These terms and conditions of use are made available to the user by MYTECHNICAL MOBILITY INFORMATION TECHNOLOGY PTE. LTD.(hereinafter referred to asMyTechnical or the Company), a company duly incorporated under the laws of Mexico with address at C Salvador Novo 347, Pensadores Mexicanos, Aguascalientes Mexico.</string>
    <string name="action_languaje">Change Language</string>
    <string name="action_exit">Exit</string>
    <string name="changepass">Change Password</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="Suburb">Suburb</string>
    <string name="cp">CP</string>
    <string name="Save">Save</string>
    <string name="name">Name:</string>
    <string name="lastName">LastName</string>
    <string name="phoneNumber">Phone number:</string>
    <string name="home">Home</string>
    <string name="profile">Profile Information</string>
    <string name="dialog">Waiting for answers from the technician</string>
    <string name="btnService">Show Order</string>
    <string name="messageservice">Technician on the way</string>
    <string name="tecnicalName">Freddy Luna</string>
    <string name="AddresTecnical">Addres:</string>
    <string name="tecnicalphone">Phone:</string>
    <string name="btnMap">Show Map</string>
    <string name="menu_title" translatable="false">MyTechnical</string>
    <string name="rateService">Rate Service</string>
    <string name="Rating">Rating</string>
    <string name="infopc">Today\'s fast pace of life requires us to have computer equipment working perfectly and 24/7, so at MyTechnical we design a fast, efficient preventive and corrective maintenance solution tailored to your needs.</string>
    <string name="infopc2">See how your PCs and Laptops (different brands and models) are renewed and help you speed up your daily tasks with our technical support service.</string>
    <string name="infopc3">Without great proposals or high costs, we make you \"a suit tailored to your real needs\".</string>
    <string name="infopc4">1.-Physical inspection of the equipment.\n2.-Diagnosis of hardware and software components.\n3.-Quotation.\n4.-Personalized assistance.</string>
    <string name="infopc5">Discover a world of possibilities with our preventive and corrective maintenance solutions for PCs and Laptops.</string>
    <string name="pc">Information</string>
    <string name="session">Close Session</string>
    <string name="servicename">Service Name</string>
    <string name="spanish">Spanish language</string>
    <string name="english">English language</string>
    <string name="invalid_mail">Enter valid email</string>
    <string name="invalid_password">Enter valid password</string>
    <string name="submit">submit</string>
</resources>