<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_languaje"
        android:orderInCategory="100"
        android:title="@string/english"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_languajeEsp"
        android:orderInCategory="100"
        android:title="@string/spanish"
        app:showAsAction="never" />
    <item
        android:id="@+id/tema"
        android:orderInCategory="100"
        android:title="Dark Mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/lingt"
        android:orderInCategory="100"
        android:title="Light theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/closeSession"
        android:orderInCategory="100"
        android:title="@string/session"
        app:showAsAction="never" />

</menu>