<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ita.com.mytechnicalv2.ui.home.HomeFragment"
        android:label="@string/title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/supportpcFragment"
        android:name="ita.com.mytechnicalv2.SupportpcFragment"
        android:label="@string/menu_supportPC"
        tools:layout="@layout/fragment_supportpc" />


    <fragment
        android:id="@+id/supportLapFragment"
        android:name="ita.com.mytechnicalv2.SupportLapFragment"
        android:label="@string/menu_supporLaptop"
        tools:layout="@layout/fragment_support_lap" />

    <fragment
        android:id="@+id/instalationNetFragment"
        android:name="ita.com.mytechnicalv2.InstalationNetFragment"
        android:label="@string/menu_instalationNetwork"
        tools:layout="@layout/fragment_instalation_net" />

    <fragment
        android:id="@+id/instalationSoftFragment"
        android:name="ita.com.mytechnicalv2.InstalationSoftFragment"
        android:label="@string/menu_instalationSoft"
        tools:layout="@layout/fragment_instalation_soft" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="ita.com.mytechnicalv2.AboutFragment"
        android:label=""
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/contacFragment"
        android:name="ita.com.mytechnicalv2.ContacFragment"
        android:label=""
        tools:layout="@layout/fragment_contac" />
    <fragment
        android:id="@+id/termAndConditionsFragment"
        android:name="ita.com.mytechnicalv2.TermAndConditionsFragment"
        android:label=""
        tools:layout="@layout/fragment_term_and_conditions" />
    <fragment
        android:id="@+id/editInformationFragment"
        android:name="ita.com.mytechnicalv2.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_editInformationFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="ita.com.mytechnicalv2.ChangePasswordFragment"
        android:label=""
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_changePasswordFragment_to_passwordChangeFragment"
            app:destination="@id/passwordChangeFragment" />
    </fragment>
    <fragment
        android:id="@+id/passwordChangeFragment"
        android:name="ita.com.mytechnicalv2.PasswordChangeFragment"
        android:label=""
        tools:layout="@layout/fragment_password_change" />
    <fragment
        android:id="@+id/congratulationPasswordChangeFragment"
        android:name="ita.com.mytechnicalv2.CongratulationPasswordChangeFragment"
        android:label="CongratulationPasswordChangeFragment"
        tools:layout="@layout/fragment_congratulation_password_change">
        <action
            android:id="@+id/action_congratulationPasswordChangeFragment_to_editInformationFragment"
            app:destination="@id/editInformationFragment" />
    </fragment>

</navigation>