<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupporLapInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/vista1"
                android:layout_width="358dp"
                android:layout_height="109dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/fondo"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/idsupportpc"
                    android:layout_width="220dp"
                    android:layout_height="67dp"
                    android:text="@string/menu_supporLaptop"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/itemelipse"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/laptop" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vista2"
                android:layout_width="0dp"
                android:layout_height="385dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vista1"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/infopc"
                    android:textSize="14dp" />


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="134dp"
                    android:layout_height="117dp"
                    android:layout_below="@+id/info"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/laptop1" />

                <TextView
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="@string/infopc2"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView4"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/infopc3"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView19"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="7dp"
                    android:text="@string/infopc4"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="369dp"
                    android:layout_height="39dp"
                    android:layout_below="@+id/textView16"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/infopc5"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>